# spherical_mosaic

./: .gitignore  CMakeLists.txt  README.md  bal_problem.cpp  datastructure.txt  log.txt  main.cpp  ransac.cpp  ransac.h  ref.cpp
bal_test/: bal_problem.h  bal_test.cpp  ref.py
notebook/: spherical_mosaic.ipynb  visual.ipynb
notebook/.ipynb_checkpoints/: spherical_mosaic-checkpoint.ipynb
src/: Frame.cpp  Frame.h  Graph.cpp  Graph.h  Initializer.cpp  Initializer.h  Mosaic.cpp  Mosaic.h  Point.cpp  Point.h  Utility.cpp  Utility.h
